--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -526,7 +526,7 @@
 #loginbox {
   display: block;
   width: 622px;
-  height: 418px;
+  height: 495px;
   top: 50%;
   left: 50%;
   margin-left: -311px;
@@ -608,7 +608,6 @@
   z-index: 3;
   height: 22px;
   padding: 12px 10px;
-  border-bottom: 1px solid #e6e6e6;
 }
 
 #loginbox .remind div {
@@ -624,4 +623,72 @@
   color: #333;
   margin-bottom: 16px;
   text-align: center;
+}
+
+#loginbox .qq .text {
+  color: #666;
+  font-size: 16px;
+  text-align: center;
+  position: relative;
+  margin-bottom: 30px;
+  zoom: 1;
+}
+
+#loginbox .qq .text a {
+  color: #3481cf;
+}
+
+#loginbox .qq .qqerweima {
+  height: 140px;
+  width: 140px;
+  border: 1px solid #D3D3D3;
+  display: block;
+  position: relative;
+  top: 0px;
+  left: 240px;
+}
+
+#loginbox .qq {
+  margin-top: 20px;
+}
+
+#loginbox .qq .checklist {
+  height: 16px;
+  margin-bottom: 8px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+  text-align: right;
+  font-size: 12px;
+  color: #666;
+}
+
+#loginbox .wx {
+  line-height: 1.6;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  text-align: center;
+}
+
+#loginbox .wx .title {
+  text-align: center;
+  font-size: 20px;
+}
+
+#loginbox .wx .wx-erweima {
+  width: 280px;
+  margin: 15px auto 0;
+}
+
+#loginbox .wx .wx-erweima img {
+  width: 100%;
+  border: 1px solid #E2E2E2;
+}
+
+#loginbox .wx .wx-erweima p {
+  font-size: 13px;
+  font-weight: 400;
+  padding: 7px 14px;
 }
