--- a/src/sass/regisitey.scss
+++ b/src/sass/regisitey.scss
@@ -234,9 +234,11 @@
     font-size    : 44px;
     margin-bottom: 20px;
 }
-#right .main .from .sp{
-    float        : right;
+
+#right .main .from .sp {
+    float: right;
 }
+
 #right .main .from .head {
     font-size    : 28px;
     margin-bottom: 64px;
@@ -248,11 +250,191 @@
         color  : #359eff;
     }
 }
-#top .lianghao .search .upper .icon:hover{
-    background   : linear-gradient(126deg, #fc4754, #ff794c) #f54444;;
+
+#top .lianghao .search .upper .icon:hover {
+    background: linear-gradient(126deg, #fc4754, #ff794c) #f54444;
+    ;
 }
-#top .lianghao .search .upper .icon:hover .icon-img{
+
+#top .lianghao .search .upper .icon:hover .icon-img {
     background      : url(https://4.url.cn/zc/v3/img/search-hover@2x.png) no-repeat transparent;
     background-image: -webkit-image-set(url(https://4.url.cn/zc/v3/img/search-hover@2x.png) 1x, url(https://4.url.cn/zc/v3/img/search-hover@2x.png) 2x);
-                background-image: image-set("https://4.url.cn/zc/v3/img/search-hover@2x.png"1x, "https://4.url.cn/zc/v3/img/search-hover@2x.png"2x);
+    background-image: image-set("https://4.url.cn/zc/v3/img/search-hover@2x.png"1x, "https://4.url.cn/zc/v3/img/search-hover@2x.png"2x);
+}
+
+#right .main form .name {
+    position: relative;
+
+}
+
+.flag {
+    position: absolute;
+    right   : 0;
+    height  : 52px;
+    z-index : 1;
+}
+
+.nametitle {
+    position   : absolute;
+    font-size  : 20px;
+    line-height: 20px;
+    padding    : 16px 20px;
+    background : #fff;
+    z-index    : -1;
+    font-weight: lighter;
+    color      : #aaa;
+}
+
+.inp-other {
+    background: 0 0;
+    margin    : 24px 0 0;
+}
+
+.error {
+    padding-top: 8px;
+    height     : 18px;
+    position   : relative;
+    line-height: 1;
+}
+
+.hint {
+    opacity: 0;
+    height : 0 !important;
+}
+
+.flag .inp-ok {
+    background: url(https://4.url.cn/zc/v3/img/tick.png) no-repeat;
+    width     : 20px;
+    height    : 15px;
+    display   : block;
+    float     : right;
+    margin    : 18.5px 10px;
+}
+
+#nickname {
+    border       : 1px #aaa solid;
+    border-radius: 4px;
+    background   : 0 0;
+    text-align   : left;
+    font-size    : 20px;
+    width        : 438px;
+    height       : 50px;
+    line-height  : 50px;
+    padding      : 0 20px;
+}
+
+.textinput .error .error-tips {
+    padding    : 0 0 0 24px;
+    color      : #ff5b5b;
+    font-size  : 14px;
+    line-height: 18px;
+    height     : 18px;
+    position   : absolute;
+    bottom     : 0;
+}
+
+#pass {
+    border       : 1px #aaa solid;
+    border-radius: 4px;
+    background   : 0 0;
+    text-align   : left;
+    font-size    : 20px;
+    width        : 438px;
+    height       : 50px;
+    line-height  : 50px;
+    padding      : 0 20px;
+}
+
+.password-tips-group {
+    height     : 78px;
+    line-height: 1;
+    overflow   : hidden;
+
+    .password-tips {
+        padding    : 0 0 0 24px;
+        font-size  : 14px;
+        line-height: 18px;
+        margin     : 8px 0 8px;
+    }
+}
+
+#phone {
+    border       : 1px #aaa solid;
+    border-radius: 4px;
+    background   : 0 0;
+    text-align   : left;
+    font-size    : 20px;
+    width        : 438px;
+    height       : 50px;
+    line-height  : 50px;
+    padding      : 0 20px;
+}
+
+.phone {
+    background: 0 0;
+    margin    : 24px 0 0;
+}
+
+.phone-area .input-tips-wrap {
+    position   : relative;
+    overflow   : hidden;
+    height     : 14px;
+    line-height: 1;
+    margin-top : 5px;
+
+    .input-tips {
+        font-size  : 14px;
+        height     : 14px;
+        color      : #999;
+        white-space: nowrap;
+        overflow   : hidden;
+        position   : absolute;
+        bottom     : 0;
+    }
+}
+
+form div #submit {
+    border          : 1px #3083ff solid;
+    border-radius   : 4px;
+    background-color: #3487ff;
+    box-shadow      : 0 5px 8px 0 rgba(24, 95, 255, .1);
+    color           : #fff;
+    text-align      : center;
+    font-weight     : lighter;
+    background-image: linear-gradient(0deg, #398bff, #3083ff);
+    width           : 478px;
+    height          : 60px;
+    margin          : 40px 0 8px;
+    font-size       : 24px;
+}
+
+#duoxuan {
+    position: relative;
+    top     : 2.5px;
+    left    : 2.5px;
+}
+
+.duoxuantishi {
+    line-height: 30px;
+    font-size  : 13px;
+    color      : #aaa;
+    margin-left: 2px;
+}
+
+.guiding-list {
+    padding-left: 18px;
+
+    a {
+        outline        : 0;
+        text-decoration: none;
+        color          : #359eff;
+        display        : block;
+        font-size      : 14px;
+    }
+}
+#right .footer{
+    font-size: 14px;
+    color: #bbb;
+    text-align: center;
+    margin: 30px 0;
 }
