--- a/src/sass/details.scss
+++ b/src/sass/details.scss
@@ -290,21 +290,905 @@ $float     :left;
         overflow: hidden;
     }
 }
+
 .product-info .pord-name {
-    width: 100%;
-    line-height: 36px;
-    *line-height: 36px;
-    font-size: 28px;
-    color: #333;
-    overflow: hidden;
-    white-space: nowrap;
+    width        : 100%;
+    line-height  : 36px;
+    *line-height : 36px;
+    font-size    : 28px;
+    color        : #333;
+    overflow     : hidden;
+    white-space  : nowrap;
     text-overflow: ellipsis;
-    font-weight: normal;
+    font-weight  : normal;
 }
+
 .product-info .pord-tips {
-    padding: 22px 0 0;
-    width: 100%;
-    font-size: 14px;
-    color: #aaa;
+    padding    : 22px 0 0;
+    width      : 100%;
+    font-size  : 14px;
+    color      : #aaa;
     line-height: 15px;
+}
+
+.product-info .pord-price {
+    padding: 20px 0 15px;
+    width  : 100%;
+    height : 28px;
+}
+
+.product-info .pord-price .pord-dispri {
+    color      : #f74f4a;
+    font-size  : 30px;
+    line-height: 31px;
+    font-weight: bold;
+}
+
+.product-info .pord-price .pord-orpri {
+    padding-left   : 5px;
+    font-size      : 16px;
+    line-height    : 38px;
+    text-decoration: line-through;
+    color          : #999;
+}
+
+.pord-saleinfo {
+    margin     : 10px 0 15px;
+    width      : 100%;
+    height     : 16px;
+    font-size  : 14px;
+    color      : #cc6600;
+    line-height: 16px;
+}
+
+.pord-saleinfo .pord-salebox {
+    padding-right: 22px;
+}
+
+.product-info .vip-link {
+    color    : #3c95e8;
+    font-size: 14px;
+}
+
+.pord-gift {
+    margin-bottom: 14px;
+    width        : 100%;
+    height       : 20px;
+    line-height  : 20px;
+    font-size    : 14px;
+    color        : #666;
+
+    .gift-mark {
+        padding   : 1px 4px;
+        background: #ffcccc;
+        border    : 1px solid #ff3333;
+        color     : #ff3333;
+        display   : inline-block;
+    }
+
+    span {
+        padding-left: 8px;
+    }
+}
+
+.pord-detailbox {
+    width        : 100%;
+    height       : 60px;
+    line-height  : 60px;
+    border-top   : 1px dashed #eee;
+    border-bottom: 1px dashed #eee;
+    font-size    : 14px;
+
+    .pord-sold {
+        width: 310px;
+        color: #999;
+
+        span {
+            color: #333;
+        }
+    }
+}
+
+.pord-detailbox .pord-totalcom {
+    color: #999;
+
+    span {
+        color: #333;
+    }
+}
+
+.pord-detailbox .pord-starbox {
+    font-size: 20px;
+    color    : #ffd92c;
+}
+
+.pord-starbox .i-star10 {
+    background-position: 0 -104px;
+    margin             : -4px 6px 0 0;
+    display            : inline-block;
+    vertical-align     : middle;
+    width              : 111px;
+    height             : 18px;
+    background         : url(https://js01.daoju.qq.com/zb/common/images/detail/ico-detail.png) 0 -104px no-repeat;
+}
+
+.fr {
+    float: right;
+}
+
+.pord-sellist {
+    width    : 100%;
+    height   : auto;
+    font-size: 14px;
+
+    li.current {
+        border-color: #f74a4a;
+    }
+}
+
+.mt10 {
+    margin-top: 10px;
+}
+
+.product-info label {
+    color      : #888;
+    padding-top: 5px;
+}
+
+.pord-sellist ul {
+    width: 660px;
+}
+
+.ml28 {
+    margin-left: 28px;
+}
+
+.pord-sellist li {
+    float      : left;
+    margin     : 0 0 10px 9px;
+    border     : 1px solid #ddd;
+    color      : #333;
+    text-align : center;
+    line-height: 14px;
+    cursor     : pointer;
+}
+
+.pord-sellist li.current .pord-selbox,
+.pord-sellist li.current .pord-samebox {
+    border-color: #f74a4a;
+}
+
+.pord-sellist li .pord-selbox {
+    padding: 7px 17px;
+    border : 2px solid #fff;
+}
+
+.product-info .pord-num {
+    width : 100%;
+    height: auto;
+}
+
+.product-info .pord-num {
+    width : 100%;
+    height: auto;
+}
+
+.product-info label.pt10 {
+    padding-top: 10px;
+}
+
+.product-info label {
+    color      : #888;
+    padding-top: 5px;
+}
+
+.ml42 {
+    margin-left: 42px;
+}
+
+.product-info .pord-num .pord-stock {
+    font-size   : 14px;
+    color       : #5e6360;
+    padding-left: 10px;
+    line-height : 34px;
+}
+
+.product-info .pord-num .num-plus,
+.product-info .pord-num .num-minus {
+    width      : 34px;
+    height     : 34px;
+    display    : block;
+    text-indent: -9999em;
+    border     : 1px solid #ddd;
+}
+
+.product-info .pord-num .num-plus .ico-detail {
+    margin             : 16px auto;
+    width              : 10px;
+    height             : 2px;
+    background-position: -2px -2px;
+    display            : block;
+}
+
+.ico-detail {
+    background: url(https://js01.daoju.qq.com/zb/common/images/detail/ico-detail.png) no-repeat;
+}
+
+.product-info .pord-num .nummidbtn {
+    width       : 58px;
+    height      : 34px;
+    border      : 1px solid #ddd;
+    border-left : none;
+    border-right: none;
+    text-align  : center;
+    line-height : 34px;
+    color       : #333;
+    display     : block;
+    font-size   : 14px;
+    cursor      : default;
+}
+
+.product-info .pord-num .num-plus,
+.product-info .pord-num .num-minus {
+    width      : 34px;
+    height     : 34px;
+    display    : block;
+    text-indent: -9999em;
+    border     : 1px solid #ddd;
+}
+
+.product-info .pord-num .num-minus .ico-detail {
+    margin             : 12px auto;
+    width              : 10px;
+    height             : 10px;
+    background-position: -16px -2px;
+    display            : block;
+}
+
+.ico-detail {
+    background: url(https://js01.daoju.qq.com/zb/common/images/detail/ico-detail.png) -254.5px -1px no-repeat;
+}
+
+.product-info .pord-num .pord-stock {
+    font-size   : 14px;
+    color       : #5e6360;
+    padding-left: 10px;
+    line-height : 34px;
+}
+
+.product-info .pord-btn {
+    margin-top: 25px;
+
+    a {
+        display    : block;
+        width      : 200px;
+        height     : 56px;
+        line-height: 56px;
+        text-align : center;
+        font-size  : 20px;
+        color      : #fff;
+        opacity    : 1;
+        filter     : alpha(opacity=100);
+    }
+}
+
+.product-info .pord-btn .joincart-btn,
+.group-action .joincart-btn {
+    background: #e34424;
+}
+
+.product-info .pord-btn .buy-btn,
+.group-action .buy-btn,
+.porduct-detail .pord-tab ul li .i-tabline {
+    background : #ec4828;
+    margin-left: 30px;
+}
+
+.product-info .pord-btn .btn-collect,
+.product-info .pord-btn .btn-collected {
+    margin       : 12px 0 0 30px;
+    display      : block;
+    width        : 84px;
+    height       : 28px;
+    line-height  : 28px;
+    border       : 2px solid #ddd;
+    border-radius: 30px;
+    font-size    : 14px;
+    color        : #888;
+    position     : relative;
+    text-indent  : 16px;
+}
+
+.product-info .pord-btn .ico-collect {
+    position           : absolute;
+    top                : 7px;
+    left               : 14px;
+    z-index            : 2;
+    width              : 16px;
+    height             : 14px;
+    background-position: -107px -2px;
+}
+
+.mt20 {
+    margin-top: 20px;
+}
+
+.porduct-detail {
+    width     : 1280px;
+    height    : auto;
+    background: #fff;
+
+    .pord-tab {
+        margin       : 0 auto 20px;
+        width        : 1220px;
+        height       : 71px;
+        border-bottom: 1px solid #eee;
+
+        ul {
+            margin: 0 auto;
+            width : 705px;
+
+            li {
+                float        : left;
+                width        : 235px;
+                height       : 71px;
+                line-height  : 71px;
+                text-align   : center;
+                color        : #333;
+                font-size    : 18px;
+                cursor       : pointer;
+                position     : relative;
+                overflow     : hidden;
+                white-space  : nowrap;
+                text-overflow: ellipsis;
+            }
+        }
+    }
+}
+.tabcont{
+    height: auto;
+}
+.porduct-detail .pord-tab ul li .i-tabline{
+    background: #ec4828;
+    width: 40px;
+    height: 4px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    margin-left: -20px;
+    display: block;
+    display: none;
+}
+.pord-detail .parameter {
+    font-size: 14px;
+    color: #777;
+    margin-left: 44px;
+    height: 40px;
+    line-height: 20px;
+    margin-bottom: 5px;
+    ul li {
+        float: left;
+        width: 300px;
+        margin-bottom: 6px;
+    }
+}
+.tabcont .pord-detail .detailbox {
+    height: auto;
+    text-align: left;
+    padding-bottom: 100px;
+    margin-top: 40px;
+    img {
+        width: auto;
+        height: auto;
+        margin: 0 auto;
+        display: block;
+    }
+}
+
+
+
+
+
+
+#footer {
+    margin-top: 40px;
+    width     : 100%;
+    height    : 233px;
+    background: #0e0e0f;
+
+    .main {
+        width     : 1280px;
+        height    : 100%;
+        background: none;
+        margin    : 0 auto;
+        position  : relative;
+
+        .logo {
+            display : block;
+            float   : left;
+            position: absolute;
+            top     : 51px;
+            left    : 80px;
+            width   : 213px;
+            height  : 64px;
+
+            img {
+                display     : block;
+                width       : 169px;
+                height      : 60px;
+                margin-right: -30px;
+            }
+        }
+    }
+}
+
+#footer .main .menu {
+    float       : left;
+    border-right: 1px solid #ccc;
+    border-left : 1px solid #ccc;
+    margin-left : 317px;
+    margin-top  : 50px;
+    width       : 397px;
+    height      : 135px;
+
+    li {
+        width  : 118px;
+        height : 55px;
+        padding: 0 38px;
+        float  : left;
+
+        a {
+            color      : #a8a8a8;
+            width      : 118px;
+            height     : 30px;
+            display    : block;
+            line-height: 30px;
+            font-size  : 16px;
+        }
+
+        a:hover {
+            color: #ffffff;
+        }
+    }
+}
+
+#footer .main .menu li .iconfont {
+    font-size   : 20px;
+    margin-right: 5px;
+}
+
+#footer .main .picli {
+    float  : left;
+    padding: 50px 0 20px 33px;
+
+    li {
+        float  : left;
+        padding: 0 45px;
+
+        img {
+            width : 100px;
+            height: 100px;
+        }
+
+        p {
+            color      : #fff;
+            font-size  : 16px;
+            width      : 100px;
+            height     : 62px;
+            text-align : center;
+            line-height: 62px;
+        }
+    }
+}
+
+#mao {
+    width   : 46px;
+    height  : 267px;
+    position: fixed;
+    bottom  : 0;
+    right   : 0;
+    z-index : 2000;
+    margin  : 0 20px 215px 0;
+
+    .m1 {
+        display      : block;
+        border       : 1px solid #dfdfdf;
+        border-bottom: none;
+        background   : #f5f5f5;
+        width        : 44px;
+        height       : 44px;
+        text-align   : center;
+        overflow     : hidden;
+        color        : #fff;
+        line-height  : 16px;
+
+        .icon-wenjian {
+            display            : block;
+            width              : 100%;
+            height             : 100%;
+            background-position: -32px -290px;
+            margin             : 0 auto;
+            padding-top        : 12px;
+            font-size          : 20px;
+            color              : #3a3f4a;
+        }
+
+        span {
+            display    : none;
+            font-size  : 16px;
+            color      : #fff;
+            padding-top: 5px;
+        }
+    }
+}
+
+#mao .m2 {
+    display      : block;
+    border       : 1px solid #dfdfdf;
+    border-bottom: none;
+    background   : #f5f5f5;
+    width        : 44px;
+    height       : 44px;
+    text-align   : center;
+    overflow     : hidden;
+    color        : #fff;
+    line-height  : 16px;
+
+    .icon-dizhi {
+        display            : block;
+        width              : 100%;
+        height             : 100%;
+        background-position: -32px -290px;
+        margin             : 0 auto;
+        padding-top        : 12px;
+        font-size          : 20px;
+        color              : #3a3f4a;
+    }
+
+    span {
+        display    : none;
+        font-size  : 16px;
+        color      : #fff;
+        padding-top: 5px;
+    }
+}
+
+#mao .m3 {
+    display      : block;
+    border       : 1px solid #dfdfdf;
+    border-bottom: none;
+    width        : 44px;
+    height       : 130px;
+    background   : #fff;
+    padding      : 0;
+    text-align   : center;
+    overflow     : hidden;
+    color        : #3a3f4a;
+    line-height  : 16px;
+
+    .icon-gouwuche {
+        display            : block;
+        width              : 100%;
+        background-position: -32px -290px;
+        margin             : 0 auto;
+        padding-top        : 12px;
+        font-size          : 20px;
+        color              : #3a3f4a;
+    }
+
+    span {
+        display    : block;
+        font-size  : 13px;
+        color      : #3a3f4a;
+        margin-top : 6px;
+        line-height: 16px;
+    }
+}
+
+#mao .m4 {
+    display      : block;
+    border       : 1px solid #dfdfdf;
+    border-bottom: none;
+    background   : #f5f5f5;
+    width        : 44px;
+    height       : 44px;
+    text-align   : center;
+    overflow     : hidden;
+    color        : #fff;
+    line-height  : 16px;
+    border       : 1px solid #dfdfdf;
+
+    .icon-qq {
+        display    : block;
+        width      : 100%;
+        margin     : 0 auto;
+        padding-top: 12px;
+        font-size  : 20px;
+        color      : #3a3f4a;
+    }
+
+    span {
+        display    : none;
+        font-size  : 16px;
+        color      : #fff;
+        padding-top: 14px;
+    }
+}
+
+#totop {
+    position: fixed;
+    bottom  : 0;
+    right   : 0;
+    z-index : 2000;
+    margin  : 0 20px 25px 0;
+    width   : 45px;
+    height  : 45px;
+
+    a {
+        width      : 43px;
+        height     : 31px;
+        display    : block;
+        border     : 1px solid #dfdfdf;
+        background : #f5f5f5;
+        text-align : center;
+        overflow   : hidden;
+        text-align : center;
+        padding-top: 12px;
+
+        .span1 {
+            margin-top : 20px;
+            font-size  : 16px;
+            font-weight: 700;
+        }
+
+        .span2 {
+            display    : none;
+            font-size  : 16px;
+            color      : #fff;
+            padding-top: 5px;
+        }
+    }
+}
+
+#mao .m1:hover {
+    background: orangered;
+}
+
+#mao .m1:hover .icon-wenjian {
+    display: none;
+}
+
+#mao .m1:hover span {
+    display: block;
+}
+
+#mao .m2:hover {
+    background: orangered;
+}
+
+#mao .m2:hover .icon-dizhi {
+    display: none;
+}
+
+#mao .m2:hover span {
+    display: block;
+}
+
+#mao .m3:hover {
+    background: orangered;
+}
+
+#mao .m3:hover span {
+    color: #fff;
+}
+
+#mao .m4:hover {
+    background: orangered;
+}
+
+#mao .m4:hover .icon-qq {
+    display: none;
+}
+
+#mao .m4:hover span {
+    display: block;
+}
+
+#totop a:hover {
+    background: orangered;
+}
+
+#totop a:hover .span1 {
+    color: #fff;
+}
+
+#footer-end {
+    background : #1b1b1b;
+    font-size  : 12px;
+    line-height: 24px;
+    padding    : 30px 0 40px;
+    text-align : center;
+
+    p {
+        color: #777;
+
+        a {
+            color: #777;
+        }
+    }
+}
+
+#footer-end p a:hover {
+    color: #dfdfdf;
+}
+
+#loginbox {
+    display         : block;
+    width           : 622px;
+    height          : 495px;
+    top             : 50%;
+    left            : 50%;
+    margin-left     : -311px;
+    margin-top      : -209px;
+    position        : fixed;
+    z-index         : 10001;
+    padding         : 0px;
+    background-color: rgb(255, 255, 255);
+
+    .close {
+        display   : block;
+        position  : absolute;
+        top       : 1px;
+        right     : 1px;
+        width     : 47px;
+        height    : 28px;
+        background: url(https://vm.gtimg.cn/tencentvideo/vstyle/web/common/style/img/login/sprite_login.png?d=0210&max_age=31104000) 0 0 no-repeat;
+        z-index   : 10;
+    }
+}
+
+#loginbox .login-method {
+    position     : relative;
+    height       : 50px;
+    margin-bottom: -1px;
+    border-bottom: 1px solid #e6e6e6;
+    background   : #f1f1f1;
+    font-size    : 0;
+    z-index      : 3;
+
+    .qq-login {
+        display   : inline-block;
+        *display  : inline;
+        zoom      : 1;
+        width     : 50%;
+        text-align: center;
+
+        a {
+            background: #31a4f6;
+            height    : 50px;
+            width     : 311px;
+            display   : block;
+
+            span {
+                display    : block;
+                height     : 50px;
+                line-height: 51px;
+                font-size  : 16px;
+                color      : #fff;
+            }
+        }
+    }
+}
+
+#loginbox .login-method .wx-login {
+    display   : inline-block;
+    *display  : inline;
+    zoom      : 1;
+    width     : 50%;
+    text-align: center;
+
+    a {
+        height : 50px;
+        width  : 311px;
+        display: block;
+
+        span {
+            display    : block;
+            height     : 50px;
+            line-height: 51px;
+            font-size  : 16px;
+            color      : #b1b1b1;
+        }
+    }
+}
+
+#loginbox .remind {
+    position        : relative;
+    z-index         : 3;
+    height          : 22px;
+    padding         : 12px 10px;
+    // border-bottom: 1px solid #e6e6e6;
+
+    div {
+        font-size  : 14px;
+        line-height: 22px;
+        color      : #a2a2a2;
+        text-align : center;
+        zoom       : 1;
+    }
+}
+
+#loginbox .qq .title {
+    font-size    : 20px;
+    color        : #333;
+    margin-bottom: 16px;
+    text-align   : center;
+}
+
+#loginbox .qq .text {
+    color        : #666;
+    font-size    : 16px;
+    text-align   : center;
+    position     : relative;
+    margin-bottom: 30px;
+    zoom         : 1;
+
+    a {
+        color: #3481cf;
+    }
+}
+
+#loginbox .qq .qqerweima {
+    height  : 140px;
+    width   : 140px;
+    border  : 1px solid #D3D3D3;
+    display : block;
+    position: relative;
+    top     : 0px;
+    left    : 310px-70px;
+}
+
+#loginbox .qq {
+    margin-top: 20px;
+
+    .checklist {
+        height       : 16px;
+        margin-bottom: 8px;
+        width        : 100%;
+        position     : absolute;
+        bottom       : 0;
+        right        : 10px;
+        text-align   : right;
+        font-size    : 12px;
+        color        : #666;
+    }
+}
+
+#loginbox .wx {
+    line-height: 1.6;
+    position   : relative;
+    width      : 100%;
+    z-index    : 1;
+    text-align : center;
+
+    .title {
+        text-align: center;
+        font-size : 20px;
+    }
+
+    .wx-erweima {
+        width : 280px;
+        margin: 15px auto 0;
+
+        img {
+            width : 100%;
+            border: 1px solid #E2E2E2;
+        }
+    }
+}
+
+#loginbox .wx .wx-erweima p {
+    font-size  : 13px;
+    font-weight: 400;
+    padding    : 7px 14px;
 }
