--- a/src/css/details.css
+++ b/src/css/details.css
@@ -3,44 +3,37 @@
   background: #0e0e0f;
   position: relative;
 }
-
 #header .headertop {
   height: 99px;
   border-bottom: 1px solid #333;
 }
-
 #header .headertop .topmain {
   width: 1280px;
   margin: 0 auto;
 }
-
 #header .headertop .topmain .cflogo {
   float: left;
   height: 75px;
   margin-right: 10px;
   margin-top: 12px;
 }
-
 #header .headertop .topmain .qqmall {
   margin-top: 20px;
   height: 60px;
   float: left;
 }
-
 #header .headertop .topmain .cart {
   float: right;
   width: 73px;
   height: 24px;
   margin-top: 47px;
 }
-
 #header .headertop .topmain .login {
   width: 84px;
   height: 24px;
   float: right;
   margin: 47px 20px 0px 50px;
 }
-
 #header .headertop .topmain .search {
   width: 240px;
   height: 40px;
@@ -94,29 +87,24 @@
   width: 1280px;
   margin: 0 auto;
 }
-
 #header .headerbottom .bottommain .headerbottom-left {
   width: 774px;
   float: left;
 }
-
 #header .headerbottom .bottommain .headerbottom-left li {
   float: left;
   width: 129px;
   line-height: 56px;
 }
-
 #header .headerbottom .bottommain .headerbottom-left li a {
   display: block;
   color: #a6a6a6;
   font-size: 16px;
   text-align: center;
 }
-
 #header .headerbottom .bottommain .headerbottom-left li a:hover {
   background-image: repeating-linear-gradient(to top, orange 0, orange 10%, transparent 10%, transparent 100%);
 }
-
 #header .headerbottom .bottommain .all {
   float: right;
   display: block;
@@ -125,7 +113,6 @@
   text-align: center;
   line-height: 56px;
 }
-
 #header .headerbottom .bottommain .all .icon-xialaanniu {
   color: orange;
 }
@@ -137,13 +124,11 @@
   top: 100%;
   display: none;
 }
-
 #header .secondnav .navmain {
   margin: 0 auto;
   width: 400px;
   height: 445px;
 }
-
 #header .secondnav .navmain .list {
   float: left;
   padding: 0 10px;
@@ -153,7 +138,6 @@
   display: table-cell;
   vertical-align: top;
 }
-
 #header .secondnav .navmain .title {
   margin: 0 auto;
   display: block;
@@ -172,13 +156,11 @@
 #header .secondnav .navmain .list ul {
   margin-top: 15px;
 }
-
 #header .secondnav .navmain .list ul li {
   line-height: 30px;
   font-size: 14px;
   color: #333;
 }
-
 #header .secondnav .navmain .list ul li:hover a {
   text-decoration: underline;
 }
@@ -189,20 +171,17 @@
   height: auto;
   padding-bottom: 40px;
 }
-
 #wrap .wrapmain .comm-tit {
   height: 27px;
   line-height: 27px;
   margin: 20px 0 40px;
 }
-
 #wrap .wrapmain .comm-tit a {
   font: 14px/26px 'Microsoft Yahei';
   *line-height: 30px;
   color: #828282;
   margin-right: -8px;
 }
-
 #wrap .wrapmain .comm-tit span {
   font: 14px/26px 'Microsoft Yahei';
   *line-height: 30px;
@@ -222,14 +201,12 @@
   width: 460px;
   height: 440px;
 }
-
 .product-intro .product-preview .good-imgs {
   position: relative;
   width: 460px;
   height: 440px;
   overflow: hidden;
 }
-
 .product-intro .product-preview .picdetails {
   margin-top: 20px;
   width: 540px;
@@ -250,7 +227,6 @@
   height: 440px;
   display: block;
 }
-
 .product-preview .good-imgs ul li a {
   display: inline-block;
   position: relative;
@@ -260,7 +236,6 @@
   width: auto;
   height: auto;
 }
-
 .product-preview .good-imgs ul li a img {
   display: block;
   width: 458px;
@@ -274,7 +249,6 @@
   margin-right: 10px;
   border: 1px solid #f2f2f2;
 }
-
 .product-preview .picdetails ul li a {
   display: block;
   width: 74px;
@@ -350,7 +324,6 @@
   font-size: 14px;
   color: #666;
 }
-
 .pord-gift .gift-mark {
   padding: 1px 4px;
   background: #ffcccc;
@@ -358,7 +331,6 @@
   color: #ff3333;
   display: inline-block;
 }
-
 .pord-gift span {
   padding-left: 8px;
 }
@@ -371,12 +343,10 @@
   border-bottom: 1px dashed #eee;
   font-size: 14px;
 }
-
 .pord-detailbox .pord-sold {
   width: 310px;
   color: #999;
 }
-
 .pord-detailbox .pord-sold span {
   color: #333;
 }
@@ -384,7 +354,6 @@
 .pord-detailbox .pord-totalcom {
   color: #999;
 }
-
 .pord-detailbox .pord-totalcom span {
   color: #333;
 }
@@ -413,7 +382,6 @@
   height: auto;
   font-size: 14px;
 }
-
 .pord-sellist li.current {
   border-color: #f74a4a;
 }
@@ -551,7 +519,6 @@
 .product-info .pord-btn {
   margin-top: 25px;
 }
-
 .product-info .pord-btn a {
   display: block;
   width: 200px;
@@ -610,19 +577,16 @@
   height: auto;
   background: #fff;
 }
-
 .porduct-detail .pord-tab {
   margin: 0 auto 20px;
   width: 1220px;
   height: 71px;
   border-bottom: 1px solid #eee;
 }
-
 .porduct-detail .pord-tab ul {
   margin: 0 auto;
   width: 705px;
 }
-
 .porduct-detail .pord-tab ul li {
   float: left;
   width: 235px;
@@ -662,7 +626,6 @@
   line-height: 20px;
   margin-bottom: 5px;
 }
-
 .pord-detail .parameter ul li {
   float: left;
   width: 300px;
@@ -675,7 +638,6 @@
   padding-bottom: 100px;
   margin-top: 40px;
 }
-
 .tabcont .pord-detail .detailbox img {
   width: auto;
   height: auto;
@@ -689,7 +651,6 @@
   height: 233px;
   background: #0e0e0f;
 }
-
 #footer .main {
   width: 1280px;
   height: 100%;
@@ -697,7 +658,6 @@
   margin: 0 auto;
   position: relative;
 }
-
 #footer .main .logo {
   display: block;
   float: left;
@@ -707,7 +667,6 @@
   width: 213px;
   height: 64px;
 }
-
 #footer .main .logo img {
   display: block;
   width: 169px;
@@ -724,14 +683,12 @@
   width: 397px;
   height: 135px;
 }
-
 #footer .main .menu li {
   width: 118px;
   height: 55px;
   padding: 0 38px;
   float: left;
 }
-
 #footer .main .menu li a {
   color: #a8a8a8;
   width: 118px;
@@ -740,7 +697,6 @@
   line-height: 30px;
   font-size: 16px;
 }
-
 #footer .main .menu li a:hover {
   color: #ffffff;
 }
@@ -754,17 +710,14 @@
   float: left;
   padding: 50px 0 20px 33px;
 }
-
 #footer .main .picli li {
   float: left;
   padding: 0 45px;
 }
-
 #footer .main .picli li img {
   width: 100px;
   height: 100px;
 }
-
 #footer .main .picli li p {
   color: #fff;
   font-size: 16px;
@@ -783,7 +736,6 @@
   z-index: 2000;
   margin: 0 20px 215px 0;
 }
-
 #mao .m1 {
   display: block;
   border: 1px solid #dfdfdf;
@@ -796,7 +748,6 @@
   color: #fff;
   line-height: 16px;
 }
-
 #mao .m1 .icon-wenjian {
   display: block;
   width: 100%;
@@ -807,7 +758,6 @@
   font-size: 20px;
   color: #3a3f4a;
 }
-
 #mao .m1 span {
   display: none;
   font-size: 16px;
@@ -827,7 +777,6 @@
   color: #fff;
   line-height: 16px;
 }
-
 #mao .m2 .icon-dizhi {
   display: block;
   width: 100%;
@@ -838,7 +787,6 @@
   font-size: 20px;
   color: #3a3f4a;
 }
-
 #mao .m2 span {
   display: none;
   font-size: 16px;
@@ -859,7 +807,6 @@
   color: #3a3f4a;
   line-height: 16px;
 }
-
 #mao .m3 .icon-gouwuche {
   display: block;
   width: 100%;
@@ -869,7 +816,6 @@
   font-size: 20px;
   color: #3a3f4a;
 }
-
 #mao .m3 span {
   display: block;
   font-size: 13px;
@@ -891,7 +837,6 @@
   line-height: 16px;
   border: 1px solid #dfdfdf;
 }
-
 #mao .m4 .icon-qq {
   display: block;
   width: 100%;
@@ -900,7 +845,6 @@
   font-size: 20px;
   color: #3a3f4a;
 }
-
 #mao .m4 span {
   display: none;
   font-size: 16px;
@@ -917,7 +861,6 @@
   width: 45px;
   height: 45px;
 }
-
 #totop a {
   width: 43px;
   height: 31px;
@@ -929,13 +872,11 @@
   text-align: center;
   padding-top: 12px;
 }
-
 #totop a .span1 {
   margin-top: 20px;
   font-size: 16px;
   font-weight: 700;
 }
-
 #totop a .span2 {
   display: none;
   font-size: 16px;
@@ -1002,11 +943,9 @@
   padding: 30px 0 40px;
   text-align: center;
 }
-
 #footer-end p {
   color: #777;
 }
-
 #footer-end p a {
   color: #777;
 }
@@ -1028,7 +967,6 @@
   padding: 0px;
   background-color: white;
 }
-
 #loginbox .close {
   display: block;
   position: absolute;
@@ -1049,7 +987,6 @@
   font-size: 0;
   z-index: 3;
 }
-
 #loginbox .login-method .qq-login {
   display: inline-block;
   *display: inline;
@@ -1057,14 +994,12 @@
   width: 50%;
   text-align: center;
 }
-
 #loginbox .login-method .qq-login a {
   background: #31a4f6;
   height: 50px;
   width: 311px;
   display: block;
 }
-
 #loginbox .login-method .qq-login a span {
   display: block;
   height: 50px;
@@ -1080,13 +1015,11 @@
   width: 50%;
   text-align: center;
 }
-
 #loginbox .login-method .wx-login a {
   height: 50px;
   width: 311px;
   display: block;
 }
-
 #loginbox .login-method .wx-login a span {
   display: block;
   height: 50px;
@@ -1101,7 +1034,6 @@
   height: 22px;
   padding: 12px 10px;
 }
-
 #loginbox .remind div {
   font-size: 14px;
   line-height: 22px;
@@ -1125,7 +1057,6 @@
   margin-bottom: 30px;
   zoom: 1;
 }
-
 #loginbox .qq .text a {
   color: #3481cf;
 }
@@ -1143,7 +1074,6 @@
 #loginbox .qq {
   margin-top: 20px;
 }
-
 #loginbox .qq .checklist {
   height: 16px;
   margin-bottom: 8px;
@@ -1163,17 +1093,14 @@
   z-index: 1;
   text-align: center;
 }
-
 #loginbox .wx .title {
   text-align: center;
   font-size: 20px;
 }
-
 #loginbox .wx .wx-erweima {
   width: 280px;
   margin: 15px auto 0;
 }
-
 #loginbox .wx .wx-erweima img {
   width: 100%;
   border: 1px solid #E2E2E2;
@@ -1184,3 +1111,5 @@
   font-weight: 400;
   padding: 7px 14px;
 }
+
+/*# sourceMappingURL=details.css.map */
