--- a/src/sass/shouye.scss
+++ b/src/sass/shouye.scss
@@ -136,12 +136,13 @@ $float     :left;
     }
 }
 
-#header .secondnav {
+ #header .secondnav {
     height  : 470px;
     width   : 100%;
     position: absolute;
     top     : 100%;
-    display : none;
+    z-index: 9999;
+    background: #ffffff;
 
     .navmain {
         margin: 0 auto;
@@ -191,13 +192,177 @@ $float     :left;
 }
 
 #body {
-    padding-top  : 50px;
-    margin       : -30px auto 0;
-    background   : #ffffff;
-    width        : 1280px;
-    border-radius: 5px;
+    margin    : 0 auto;
+    min-height: 346px;
+    height    : auto;
+    min-width : 1240px;
+    width     : 100%;
+    overflow  : hidden;
+    position  : relative;
 
 }
+
+#body .banner .slidebann {
+    margin    : 0 auto;
+    min-height: 346px;
+    height    : auto;
+    min-width : 1240px;
+    width     : 100%;
+    overflow  : hidden;
+    clear     : both;
+    position  : relative;
+    background: #202020;
+    padding   : 0;
+}
+
+#body .banner .slidebann a {
+    margin    : 0 auto;
+    min-height: 346px;
+    height    : auto;
+    min-width : 1240px;
+    width     : 100%;
+    // display   : none;
+}
+
+#body .banner .slidebann a img {
+    margin        : 0 auto;
+    min-height    : 346px;
+    height        : auto;
+    min-width     : 1240px;
+    width         : 100%;
+    vertical-align: bottom;
+    font-size     : 0;
+    border        : 0;
+}
+
+
+#body .banner .slidebann .flash_bar {
+    width      : 180px;
+    margin-left: -90px;
+    z-index    : 69;
+    height     : 5px;
+    overflow   : hidden;
+    position   : absolute;
+    bottom     : 45px;
+    left       : 50%;
+    text-align : center;
+}
+
+.flash_bar .no {
+    margin: 0 4px;
+    display: block;
+    float: left;
+    width: 28px;
+    height: 4px;
+    cursor: pointer;
+    background: rgb(255,255,255);
+    background: rgba(255,255,255,0.2);
+}
+
+.flash_bar .dq {
+    /* margin: 0 4px; */
+    display: block;
+    float: left;
+    width: 28px;
+    height: 4px;
+    cursor: pointer;
+    background: #ffc933;
+}
+
+.mid {
+    width: 1280px;
+    margin: 0 auto;
+    position: relative;
+}
+.index-main {
+    margin-top: -30px;
+    padding-bottom: 50px;
+    background: #fff;
+    border-radius: 8px;
+}
+.index-tit {
+    padding: 50px 50px 0;
+    line-height: 32px;
+    font-size: 14px;
+}
+.index-tit h3 {
+    margin-right: 20px;
+    display: inline-block;
+    font-weight: bold;
+    color: #333;
+    font-size: 28px;
+}
+.index-tit .link-more {
+    font-size: 16px;
+    color: #333;
+    line-height: 30px;
+}
+.fr {
+    float: right;
+}
+.adbox {
+    margin: 15px auto 0;
+    width: 1180px;
+    height: 240px;
+}
+
+.adbox .ad-link {
+    display: block;
+}
+
+img {
+    display: block;
+}
+.good-list.index-glist {
+    padding-top: 20px;
+    padding-bottom: 0;
+}
+.good-list ul {
+    margin-left: 40px;
+    width: 1200px;
+    height: 360px;
+}
+
+.good-list ul li {
+    margin: 0 10px 20px;
+    float: left;
+    width: 280px;
+    height: 356px;
+    border: 1px solid #eee;
+    position: relative;
+    z-index: 1;
+    -webkit-transition: all .2s linear;
+    transition: all .2s linear;
+    overflow: hidden;
+}
+.good-list.index-glist ul li {
+    margin-right: 7px;
+    margin-bottom: 0;
+}
+.good-list ul li .good-info {
+    margin-top: 18px;
+    text-align: center;
+    overflow: hidden;
+}
+.good-list ul li p {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    line-height: 24px;
+}
+.good-list ul li .good-name {
+    font-size: 14px;
+    color: #444;
+}
+.good-list ul li .good-pri {
+    line-height: 25px;
+    font-size: 16px;
+    color: #f7545f;
+}
+
+
+
+
 
 #footer {
     margin-top: 40px;
@@ -679,21 +844,25 @@ $float     :left;
     width      : 100%;
     z-index    : 1;
     text-align : center;
-    .title{
+
+    .title {
         text-align: center;
-    font-size : 20px;
+        font-size : 20px;
     }
-    .wx-erweima{
-        width: 280px;
+
+    .wx-erweima {
+        width : 280px;
         margin: 15px auto 0;
-        img{
-            width: 100%;
+
+        img {
+            width : 100%;
             border: 1px solid #E2E2E2;
         }
     }
 }
-#loginbox .wx .wx-erweima p{
-    font-size: 13px;
+
+#loginbox .wx .wx-erweima p {
+    font-size  : 13px;
     font-weight: 400;
-    padding: 7px 14px;
+    padding    : 7px 14px;
 }
