--- a/src/css/regisitey.css
+++ b/src/css/regisitey.css
@@ -273,18 +273,16 @@
 
 .error {
   padding-top: 8px;
-  height: 18px;
+  height: auto;
   position: relative;
   line-height: 1;
 }
 
-.hint {
-  opacity: 0;
-  height: 0 !important;
+.password-tips-group {
+  display: none;
 }
 
 .flag .inp-ok {
-  background: url(https://4.url.cn/zc/v3/img/tick.png) no-repeat;
   width: 20px;
   height: 15px;
   display: block;
@@ -311,7 +309,8 @@
   line-height: 18px;
   height: 18px;
   position: absolute;
-  bottom: 0;
+  bottom: -10px;
+  left: -15px;
 }
 
 #pass {
@@ -328,8 +327,9 @@
 
 .password-tips-group {
   height: 78px;
-  line-height: 1;
-  overflow: hidden;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-top: 5px;
 }
 .password-tips-group .password-tips {
   padding: 0 0 0 24px;
@@ -385,6 +385,8 @@ form div #submit {
   height: 60px;
   margin: 40px 0 8px;
   font-size: 24px;
+  display: block;
+  line-height: 60px;
 }
 
 #duoxuan {
